# django-template

./: .gitignore  README.md
.github/workflows/: backend.yml
backend/: .flake8  README.md  docker-compose.yml  pyproject.toml
backend/config/: env-sample
backend/contrib/: env-sample
backend/devpro/: settings.py  urls.py
backend/devpro/base/: admin.py  tests.py  urls.py
backend/devpro/base/migrations/: 0001_initial.py  0002_userprofile.py
backend/devpro/base/templates/base/: base.html
backend/docker/: docker-compose.yml
config/: env-sample
docker/: README.md  docker-compose.yml  nginx.conf
