[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Template de projeto Django com as boas práticas da DevPro"
authors = ["Gustavo Junior dos Santos <gustavojuniordos@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
python-decouple = "^3.8"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-django = "^4.8.0"
flake8 = "^7.1.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "devpro.settings"
python_files = ["test*.py", "*test.py", "testing/python/*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [".git", ".venv", "__pycache", "migrations", "tests", "build", "dist"]
max-complexity = 10
max-line-length = 150