[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Template de projeto Django com as boas práticas da DevPro"
authors = ["Gustavo Junior dos Santos <gustavojuniordos@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "devpro" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-decouple = "^3.8"
dj-database-url = "^2.2.0"
psycopg2 = "^2.9.9"
django-min-custom-user = "^0.2.0"
django-storages = {extras = ["s3"], version = "^1.14.4"}
pillow = "^10.4.0"
django-extensions = "^3.2.3"
ipython = "^8.27.0"
devpro-s3-storages = "^0.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
ruff = "^0.7.1"
taskipy = "^1.14.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "devpro.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.ruff]
line-length=120
exclude = ['./devpro/base/migrations']

[tool.ruff.lint]
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ["PLR2004", "PLW0603"]

[tool.ruff.format]
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'

format = 'ruff check . --fix && ruff format .'

run = 'python manage.py runserver'

pre_test = 'task lint'
test = 'pytest devpro/ -s -x --cov=devpro -vv'
post_test = 'coverage html'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
